test/classes/hilde/records/assignReturns-error.good
assignReturns-error.chpl:9: error: The return value of an assignment operator must be 'void'.
